# genAI-for-Architects

./: README.md  app.py  pyproject.toml
